[package]
name = "resource_packer"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.5.3", features = ["derive"] }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
